--- a/task6/task6.html
+++ b/task6/task6.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/task6.css">
+	<link rel="stylesheet" href="task6.css">
 	<title>task6</title>
 </head>
 <body>
