--- a/task6/task6.html
+++ b/task6/task6.html
@@ -94,13 +94,13 @@
 			端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端
 		</p>
 		<p>
-			<img src="img/6_2.jpg">
+			<img src="img/6_2.png">
 			前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端
 		</p>
 		</div>
 	</div>
 	<div class="right">
-		<img src="img/6_3.jpg">
+		<img src="img/6_3.png">
 		<div class="maskgrey">
 			<p class="line"></p>
 			<p class="textleft">前端技术</p>
