--- a/task6/task6.html
+++ b/task6/task6.html
@@ -43,7 +43,7 @@
 	</div>
 </article>
 <article class="area2">
-<div class="what">
+<div class="item what">
 				<span>What</span> 
 				<p>
 					前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
@@ -56,7 +56,7 @@
 
 				</p>
 			</div>
-			<div class="when">
+			<div class="item when">
 				<span>When</span> 
 				<p>
 					前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
@@ -67,7 +67,7 @@
 
 				</p>
 			</div>
-			<div class="how">
+			<div class="item how">
 				<span>How</span> 
 				<p>
 					前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
