--- a/task7/index.html
+++ b/task7/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="top">
-        <img src="images/log.jpg" class="log">
+        <img src="img/log.jpg" class="log">
         <ul>
             <li class="active">首页</li>
             <li>最新活动</li>
@@ -20,37 +20,37 @@
         </ul>
     </div>
     <div id="banner">
-        <img src="images/banner.jpg" class="w100">
+        <img src="img/banner.jpg" class="w100">
         <div class="btn">开始体验</div>
     </div>
     <div id="nav" class="w100">
         <div class="list">
-            <img src="images/nav1.jpg" class="list_img">
+            <img src="img/nav1.jpg" class="list_img">
             <p class="list_article noborder">打造全新的世界观，让你更爱你的生活</p>
         </div>
         <div class="list">
-            <img src="images/nav2.jpg" class="list_img">
+            <img src="img/nav2.jpg" class="list_img">
             <p class="list_article">丰富多彩的公益活动，发挥新世界的主人公意识</p>
         </div>
         <div class="list">
-            <img src="images/nav3.jpg" class="list_img">
+            <img src="img/nav3.jpg" class="list_img">
             <p class="list_article">时尚的新理念，超前体验未知的生活</p>
         </div>
         <div class="list">
-            <img src="images/nav4.jpg" class="list_img">
+            <img src="img/nav4.jpg" class="list_img">
             <p class="list_article">完善的培养机制，培养你全新的世界观</p>
         </div>
     </div>
     <div id="main">
         <div class="main_top">
-            <img src="images/main_top.jpg">
+            <img src="img/main_top.jpg">
             <p>关于新世界，你不知道的还有什么？</p>
         </div>
         <div class="main_map">
             <div class="map_div ml">
-                <input class="map_input" type="text" placeholder="中国"></input><img class="down" src="images/down.jpg"></div>
+                <input class="map_input" type="text" placeholder="中国"></input><img class="down" src="img/down.jpg"></div>
             <div class="map_div pr">
-                <input class="map_input" type="text" placeholder="省份"></input><img class="down" src="images/down.jpg">
+                <input class="map_input" type="text" placeholder="省份"></input><img class="down" src="img/down.jpg">
                 <div class="province">
                 <label class="title">城市</label>
                     <select name="city">
@@ -63,38 +63,38 @@
                 </div>
             </div>
             <div class="map-div">
-                <input class="map_input" type="text" placeholder="城市"></input><img class="down" src="./images/down.jpg"></div>
+                <input class="map_input" type="text" placeholder="城市"></input><img class="down" src="img/down.jpg"></div>
             <span class="main_map_search">搜索</span>
         </div>
         <div class="main_activeCenter">
             <div class="activeCenter ml">
-                <img src="images/bjhd.jpg">
+                <img src="img/bjhd.jpg">
                 <p class="activeCenter_head">北京活动</p>
                 <p>新社区大联盟</p>
             </div>
             <div class="activeCenter">
                 <p class="activeCenter_head">上海活动</p>
                 <p>夜上海景观探索</p>
-                <img src="images/shhd.jpg">
+                <img src="img/shhd.jpg">
             </div>
             <div class="activeCenter">
-                <img src="images/szhd.jpg">
+                <img src="img/szhd.jpg">
                 <p class="activeCenter_head">深圳活动</p>
                 <p>全新海岸线双点站</p>
             </div>
             <div class="activeCenter">
                 <p class="activeCenter_head">香港活动</p>
                 <p>奢侈消费大派送</p>
-                <img src="images/xghd.jpg">
+                <img src="img/xghd.jpg">
             </div>
         </div>
         <div class="main_newworld">
             <div class="newworld_left"></div>
             <div class="newworld_right">
-                <img class="newworld01" src="images/newworld01.jpg">
+                <img class="newworld01" src="img/newworld01.jpg">
                 <p class="newworld01_text">新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界</p>
                 <div class="newworld01_btn">更多详情</div>
-                <img class="newworldmore" src="images/newworldmore.jpg">
+                <img class="newworldmore" src="img/newworldmore.jpg">
             </div>
         </div>
         <div class="main_aboutours">
@@ -117,17 +117,17 @@
                     <h4>新世界志愿者协议</h4>
                     <p>加入新世界志愿者的人员必须遵守中华人民共共和国的 相关法律法规，并且本着平等资源的原则......
                     </p>
-                    <span><img src="images/down2.jpg">more</span>
+                    <span><img src="img/down2.jpg">more</span>
                 </div>
                 <div class="mt">
                     <h4>新世界志愿者权利</h4>
                     <p>新世界志愿者享受新世界内部所有资源共享的权利，并 且享受所在四新世界活动的优先参与资格
                     </p>
-                    <span><img src="images/down2.jpg">more</span>
+                    <span><img src="img/down2.jpg">more</span>
                 </div>
                 <div class="mt">
                     <h4>更多条款</h4>
-                    <span><img src="images/down2.jpg">more</span>
+                    <span><img src="img/down2.jpg">more</span>
                 </div>
             </div>
             <div class="joinour_form">
@@ -152,10 +152,10 @@
             	<input class="footer_top_input2" type="submit" value="提交"></input>
             </form>
             <ul class="footer_top_ul">
-            	<li class="footer_top_li"><img src="images/qq.jpg"></li>
-            	<li class="footer_top_li"><img src="images/wb.jpg"></li>
-            	<li class="footer_top_li"><img src="images/tw.jpg"></li>
-            	<li class="footer_top_li"><img src="images/dq.jpg"></li>
+            	<li class="footer_top_li"><img src="img/qq.jpg"></li>
+            	<li class="footer_top_li"><img src="img/wb.jpg"></li>
+            	<li class="footer_top_li"><img src="img/tw.jpg"></li>
+            	<li class="footer_top_li"><img src="img/dq.jpg"></li>
             </ul>
         </div>
         <div class="foote_bottem">
