--- a/task7/index.html
+++ b/task7/index.html
@@ -16,7 +16,7 @@
             <li>项目介绍</li>
             <li>爱心社区</li>
             <li>关于我们</li>
-            <img class="li_setIn" src="images/setIn.jpg">
+            <img class="li_setIn" src="img/setIn.jpg">
         </ul>
     </div>
     <div id="banner">
@@ -51,18 +51,14 @@
                 <input class="map_input" type="text" placeholder="中国"></input><img class="down" src="img/down.jpg"></div>
             <div class="map_div pr">
                 <input class="map_input" type="text" placeholder="省份"></input><img class="down" src="img/down.jpg">
-                <div class="province">
-                <label class="title">城市</label>
-                    <select name="city">
-				<option value="beijing">北京市</option>
+                <option value="beijing">北京市</option>
               <option value="shanghai">上海市</option>
               <option value="hebei">河北省</option>
               <option value="shan'xi">陕西省</option>
-				<option value="neimenggu">内蒙古自治区</option>
-				<option value="liaoning">辽宁省</option>
+                <option value="neimenggu">内蒙古自治区</option>
+                <option value="liaoning">辽宁省</option>
                 </div>
-            </div>
-            <div class="map-div">
+            <div class="map_div">
                 <input class="map_input" type="text" placeholder="城市"></input><img class="down" src="img/down.jpg"></div>
             <span class="main_map_search">搜索</span>
         </div>
