--- a/task7/index.html
+++ b/task7/index.html
@@ -50,8 +50,8 @@
             <div class="map_div ml">
                 <input class="map_input" type="text" placeholder="中国"></input><img class="down" src="img/down.jpg"></div>
             <div class="map_div pr">
-                <input class="map_input" type="text" placeholder="省份"></input><img class="down" src="img/down.jpg">
-                <option value="beijing">北京市</option>
+                <label class="map_input" type="text" placeholder="省份"></label><img class="down" src="img/down.jpg">
+            <option value="beijing">北京市</option>
               <option value="shanghai">上海市</option>
               <option value="hebei">河北省</option>
               <option value="shan'xi">陕西省</option>
