--- a/task7/index.html
+++ b/task7/index.html
@@ -51,13 +51,17 @@
                 <input class="map_input" type="text" placeholder="中国"></input><img class="down" src="img/down.jpg"></div>
             <div class="map_div pr">
                 <label class="map_input" type="text" placeholder="省份"></label><img class="down" src="img/down.jpg">
-            <option value="beijing">北京市</option>
-              <option value="shanghai">上海市</option>
-              <option value="hebei">河北省</option>
-              <option value="shan'xi">陕西省</option>
-                <option value="neimenggu">内蒙古自治区</option>
-                <option value="liaoning">辽宁省</option>
+            <div class="province">
+                    <ul>
+                        <li>北京市</li>
+                        <li>天津市</li>
+                        <li>河北省</li>
+                        <li>陕西省</li>
+                        <li>内蒙古自治区</li>
+                        <li>辽宁省</li>
+                    </ul>
                 </div>
+            </div>
             <div class="map_div">
                 <input class="map_input" type="text" placeholder="城市"></input><img class="down" src="img/down.jpg"></div>
             <span class="main_map_search">搜索</span>
