--- a/task9/task9.html
+++ b/task9/task9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>task9</title>
-    <link rel="stylesheet" href="task9.css">
+    <link rel="stylesheet" href="css/task9.css">
 </head>
 <body>
     <header>
