--- a/task8/task8.html
+++ b/task8/task8.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/index.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/task8.css" media="screen" title="no title" charset="utf-8">
     <title>task8</title>
   </head>
   <body>
