--- a/task10/task10.html
+++ b/task10/task10.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/task10.css">
 </head>
 
 <body>
