--- a/stage 2/task5/task5.html
+++ b/stage 2/task5/task5.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 05</title>
+    <title> task5</title>
     <link rel="stylesheet" href="task5.css" />
 </head>
 
